    - new method "getChangelog()"
  * apt/gtk/widgets.py:
    - new gobject GOpProgress
    - new gobject GFetchProgress
    - new gobject GInstallProgress
    - new gobject GDpkgInstallProgress
    - new widget GtkAptProgress
  * doc/examples/gui-inst.py: 
    - updated to use the new widgets
  * debian/control:
    - add suggests for python-gtk2 and python-vte

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Nov 2008 14:30:32 +0100

python-apt (0.7.8) unstable; urgency=low

  [ Michael Vogt ]
  * python/cache.cc:
    - fix crash if Ver.PriorityType() returns NULL 
    - fix GetCandidateVer() reporting incorrect versions after
      SetCandidateVer() was used. Thanks to Julian Andres Klode for
      the test-case (LP: #237372)
  * python/apt_instmodule.cc:
    - do not change working dir in debExtractArchive() (LP: #184093)
  * apt/cache.py:
    - support "in" in apt.Cache() (LP: #251587)
  * apt/package.py:
    - do not return None in sourcePackageName (LP: #123062)
  * python/progress.cc:
    - when pulse() does not return a boolean assume "true"
      (thanks to Martin Pitt for telling me about the problem)
  * python/apt_pkgmodule.cc:
    - add "SelState{Unknown,Install,Hold,DeInstall,Purge}" constants
  * aptsources/__init__.py, aptsources/distinfo.py:
    - run apt_pkg.init() when aptsources gets imported and not
      the distinfo function
    - fix detection of cdrom sources and add test for it
  * python/metaindex.cc
    - fix crash when incorrect attribute is given
  * data/templates/Ubuntu.info.in:
    - updated
  * aptsources/distro.py:
    - add parameter to get_distro() to make unit testing easier
  * tests/test_aptsources_ports.py:
    - add test for arch specific handling (when sub arch is on
      a different mirror than "main" arches)

  [ Julian Andres Klode ]
  * python/acquire.cc (GetPkgAcqFile): Support DestDir and DestFilename.

 -- Michael Vogt <mvo@debian.org>  Mon, 24 Nov 2008 10:24:30 +0200
