@@ -1,3 +1,4 @@
 README
 apt/README.apt
 data/templates/README.templates
+html/
