@@ -25,6 +25,9 @@ python-apt (0.7.9) UNRELEASED; urgency=low
     - updated to use the new widgets
   * debian/control:
     - add suggests for python-gtk2 and python-vte
+  * setup.py:
+    - build html/ help of the apt and aptsources modules
+      into /usr/share/doc/python-apt/html
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Nov 2008 14:30:32 +0100
 
